syntax = "proto3";

package ticktrader.algo.server.publicApi;

option csharp_namespace = "TickTrader.Algo.Server.PublicAPI";

import "google/protobuf/wrappers.proto";


message BoolParameterConfig {
    string property_id = 1;
    bool value = 2;
}

message Int32ParameterConfig {
    string property_id = 1;
    int32 value = 2;
}

message NullableInt32ParameterConfig {
    string property_id = 1;
    google.protobuf.Int32Value value = 2;
}

message DoubleParameterConfig {
    string property_id = 1;
    double value = 2;
}

message NullableDoubleParameterConfig {
    string property_id = 1;
    google.protobuf.DoubleValue value = 2;
}

message StringParameterConfig {
    string property_id = 1;
    string value = 2;
}

message EnumParameterConfig {
    string property_id = 1;
    string value = 2;
}

message FileParameterConfig {
    string property_id = 1;
    string file_name = 2;
}